hphp/hack/test/sound_dynamic/typing/constraint_array_index/after/shape_ignore_error.bad.php
<?hh
function f(~shape("a" => ?shape()) $a): void {
  $x = $a["a"]["a"] ?? null;
}
